feat(gui): name-first flow, HomePanel hub, generic LetterPanel, ScoreHub redesign
- Boot into name gate (MenuPanel) instead of splash screen; deleted StartPanel
- HomePanel is the post-login hub: PLAY / HIGH SCORES / THANK-YOU LETTER
- LetterPanel replaces SpecialPanel/2/3 + guest letter; content via Supplier
  evaluated on onEnter so {name} always matches current AppSession user
- ScoreHubPanel rebuilt: Oswald grid layout, readable fonts, personal best
- NormalPanel cleaned: dead lbLetter/setLbLetter removed, buttons → HOME
- GamePanel + ScoreHubPanel back buttons → HOME
- Config.THANKS_LETTER + LETTER_THANKS in .env.example
- AppSession.logout() for test resets
- FlowNavigationTest: 5 EDT tests verifying full navigation flow
- README rewritten concise; D16 decision record added
- 28 tests pass (33 incl. GUI focus regression suite)